feat: Added reverse workspace scrolling (#1179)
* added reverse scrolling to settings and widget

* added support for dankbar scrolling

* Better settings description

* removed isNiri conditional from search index

--- a/quickshell/translations/settings_search_index.json
+++ b/quickshell/translations/settings_search_index.json
@@ -794,6 +794,26 @@
     "conditionKey": "isNiri"
   },
   {
+    "section": "reverseScrolling",
+    "label": "Reverse Scrolling Direction",
+    "tabIndex": 4,
+    "category": "Workspaces",
+    "keywords": [
+      "active",
+      "contain",
+      "desktop",
+      "desktops",
+      "scroll",
+      "scrolling",
+      "reverse",
+      "direction",
+      "windows",
+      "workspace",
+      "workspaces"
+    ],
+    "description": "Display only workspaces that contain windows"
+  },
+  {
     "section": "showWorkspaceApps",
     "label": "Show Workspace Apps",
     "tabIndex": 4,
